<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".gk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quecount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_10"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="6dp"
            android:gravity="center_horizontal"

            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/scoretxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="6dp" />

            <TextView
                android:id="@+id/scorecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="6dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/timertxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="6dp" />

            <TextView
                android:id="@+id/timercount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="6dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_view"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/questions"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/questions"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"/>


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiobtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:theme="@style/RadioButton"
            android:textColor="@color/black"
            android:text="@string/radiobutton"/>

        <RadioButton
            android:id="@+id/radiobtn2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:theme="@style/RadioButton"
            android:text="@string/radiobutton" />

        <RadioButton
            android:id="@+id/radiobtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/radiobutton"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/RadioButton" />

        <RadioButton
            android:id="@+id/radiobtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/radiobutton"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/RadioButton" />


    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextbtn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textAllCaps="false" />




</LinearLayout>




